--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 <body class="page">
    <!--загальний стайл body-->
    <header class="header">
-      <div class="container">
+      <div class="container header-conteiner">
          <nav class="header-list">
             <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
 
             <ul class="style-nav">
-               <li class="link current"><a href="index.html">Студия</a></li>
-               <li class="link"><a href="portfolio.html">Портфолио</a></li>
-               <li class="link"><a href="">Контакты</a></li>
-            </ul>
-
-            <ul class="info">
-               <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-               <li class="tel"><a href="tel:+380961111111">+38(096)111 11 11</a></li>
+               <li class="link-list"><a class="link current" href="index.html">Студия</a></li>
+               <li class="link-list"><a class="link" href="portfolio.html">Портфолио</a></li>
+               <li class="link-list"><a class="link" href="">Контакты</a></li>
             </ul>
          </nav>
+
+         <ul class="info">
+            <li class="info-list"><a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="info-list"><a class="tel" href="tel:+380961111111">+38(096)111 11 11</a></li>
+         </ul>
       </div>
    </header>
 
    <main>
       <!--секція Герой-->
       <section class="hero">
-         <div class="container">
-            <div class="title">
-               <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+         <div class="container title">
 
-               <button type="button" class="hero-button" name="Order services">Заказать услугу</button>
-            </div>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+
+            <button type="button" class="hero-button" name="Order services">Заказать услугу</button>
+
          </div>
       </section>
 
@@ -82,7 +82,7 @@
       <!--секція Галерея-->
       <section class="galery">
 
-         <div class=" container">
+         <div class=" container galery-list">
 
             <h2 class="galery-title">Чем мы занимаемся</h2>
 
@@ -101,7 +101,7 @@
 
       <!--секція Команда-->
       <section class="team">
-         <div class="container">
+         <div class="container teams-list">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                <div class="personal-card">
@@ -144,20 +144,21 @@
 
    <!--секція Футер-->
    <footer class="footer">
-      <div class="container">
+      <div class="container footer-title">
 
          <h2 hidden>Address</h2>
-         <div class="footer-title">
-            <a href="index.html" class="logo-footer"><span style="color: var(--accent-color)">Web</span>Studio</a>
-            <address>
-               <ul>
-                  <li class="address"><a href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a>
-                  </li>
-                  <li class="mail-footer"><a href="mailto:info@example.com">info@example.com</a></li>
-                  <li class="tel-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-               </ul>
-            </address>
-         </div>
+
+         <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
+         <address class="adress-title">
+            <ul class="adress-list">
+               <li class="list"><a class="address" href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки,
+                     26</a>
+               </li>
+               <li class="list"><a class="mail-footer" href="mailto:info@example.com">info@example.com</a></li>
+               <li class="list"><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+         </address>
+
       </div>
    </footer>
 </body>
