--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
    <main>
       <!--секція Герой-->
-      <section class="hero">
-         <div class="container title">
+      <section class="section hero">
+         <div class="container hero">
 
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
@@ -47,12 +47,13 @@
       </section>
 
       <!--секція Особливості-->
-      <section class="special">
+      <section class="section special">
 
-         <div class="container">
+         <div class="container galary-top">
+
             <h2 class="special-title visually-hidden">Особенности</h2>
 
-            <ul class="galery-title-list">
+            <ul class="galery-special">
                <li class="subtitle-list">
                   <h3 class="special-subtitle">Внимание к деталям</h3>
                   <p class="special-text">Идейные соображения, а также начало повседневной работы по формированию
@@ -80,27 +81,27 @@
       </section>
 
       <!--секція Галерея-->
-      <section class="galery">
+      <section class="section work">
 
-         <div class=" container galery-list">
+         <div class=" container work-list">
 
-            <h2 class="galery-title">Чем мы занимаемся</h2>
+            <h2 class="work-title">Чем мы занимаемся</h2>
 
-            <ul class="galery-title-img">
+            <ul class="work-title-img">
 
-               <li class="galery-img"><img class="pict" src="./img/box1.jpg" alt="Desk top" width="370" height="294">
+               <li class="work-img"><img class="pict" src="./img/box1.jpg" alt="Desk top" width="370" height="294">
                </li>
 
-               <li class="galery-img"><img class="pict" src="./img/box2.jpg " alt="Mobile phone" width="370"
-                     height="294"></li>
+               <li class="work-img"><img class="pict" src="./img/box2.jpg " alt="Mobile phone" width="370" height="294">
+               </li>
 
-               <li class="galery-img"><img class="pict" src="./img/box3.jpg " alt="Tabl" width="370" height="294"></li>
+               <li class="work-img"><img class="pict" src="./img/box3.jpg " alt="Tabl" width="370" height="294"></li>
             </ul>
          </div>
       </section>
 
       <!--секція Команда-->
-      <section class="team">
+      <section class="section team">
          <div class="container teams-list">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
@@ -143,21 +144,23 @@
    </main>
 
    <!--секція Футер-->
-   <footer class="footer">
-      <div class="container footer-title">
+   <footer class="section footer">
+      <div class="container footer">
 
          <h2 class="visually-hidden">Address</h2>
-
-         <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
-         <address class="adress-title">
-            <ul class="adress-list">
-               <li class="list"><a class="address" href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки,
-                     26</a>
-               </li>
-               <li class="list"><a class="mail-footer" href="mailto:info@example.com">info@example.com</a></li>
-               <li class="list"><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-         </address>
+         <div class="container-box">
+            <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
+            <address class="adress-title">
+               <ul class="adress-list">
+                  <li class="list"><a class="address" href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси
+                        Украинки,
+                        26</a>
+                  </li>
+                  <li class="list"><a class="mail-footer" href="mailto:info@example.com">info@example.com</a></li>
+                  <li class="list"><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+               </ul>
+            </address>
+         </div>
 
       </div>
    </footer>
