--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
 
    <!--Новий розділ стосовно сторінки 2 ------------------------------------ -->
    <main>
-      <section class="content">
+      <section class="section content">
 
-         <div class="container second-letters">
+         <div class="container content">
 
             <h1 class="portfolio visually-hidden">Портфоліо</h1>
 
@@ -137,21 +137,23 @@
    </main>
 
    <!--секція Футер-->
-   <footer class="footer">
-      <div class="container footer-title">
+   <footer class="section footer">
+      <div class="container footer">
 
          <h2 class="visually-hidden">Address</h2>
-
-         <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
-         <address class="adress-title">
-            <ul class="adress-list">
-               <li class="list"><a class="address" href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки,
-                     26</a>
-               </li>
-               <li class="list"><a class="mail-footer" href="mailto:info@example.com">info@example.com</a></li>
-               <li class="list"><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-         </address>
+         <div class="container-box">
+            <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
+            <address class="adress-title">
+               <ul class="adress-list">
+                  <li class="list"><a class="address" href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси
+                        Украинки,
+                        26</a>
+                  </li>
+                  <li class="list"><a class="mail-footer" href="mailto:info@example.com">info@example.com</a></li>
+                  <li class="list"><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+               </ul>
+            </address>
+         </div>
 
       </div>
    </footer>
