--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body class="page">
    <!--загальний стайл body-->
-   <header class="header">
+   <header class="section header">
       <div class="container header-conteiner">
          <nav class="header-list">
             <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
