--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
    <footer class="section footer">
       <div class="container footer">
 
-         <h2 class="visually-hidden">Address</h2>
+         <!--<h2 class="visually-hidden">Address</h2>-->
          <div class="container-box">
             <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
             <address class="adress-title">
