--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 
          <div class="container content">
 
-            <h1 class="portfolio visually-hidden">Портфоліо</h1>
+            <!--<h1 class="portfolio visually-hidden">Портфоліо</h1>-->
 
             <ul class="btn-menu">
                <li class="btn-list"><button type="button" class="btn-secondary current-btn-secondary">Все</button>
